<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">P2_GestureBasedInteraction</string>
    <string name="start">Start</string>
    <string name="tutorial">Tutorial</string>
    <string name="gesture_app">Gesture App</string>
    <string name="todo">TODO</string>
    <string name="cursor">Cursor</string>
    <string name="scroll">Scroll</string>
    <string name="drag">Drag</string>
    <string name="select">Select</string>
    <string name="sensivity01">Sensivity</string>
    <string name="sensivity02">Sensivity</string>
    <string name="cursor_sens">Cursor sens</string>
    <string name="scroll_sens">scroll sens</string>
    <string name="CursorAngle">scroll sens</string>
    <string name="cursorSpeed">scroll sens</string>
    <string name="ScrollSpeed">scroll sens</string>
    <string name="ScrollAngle">scroll sens</string>
<<<<<<< HEAD
    <string name="home">Button</string>
    <string name="back">Button</string>
    <string name="stop">Stop</string>

=======
>>>>>>> parent of 7dd35bd... test fake bottom bar
</resources>
